Registration almost complete
almost done with registration will finish when I get back next week

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="topnav">
-  <a class="title" href="home.html">This is a title, but should also be a link to main page</a>
+  <a class="title" href="index.html">This is a title, but should also be a link to main page</a>
   <a class="login" href="register.html">Register</a>
 </div>
 </head>
