--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,8 +7,8 @@
 <body>
 
 <div class="topnav">
-  <a class="title" href="./home.html">Main page(Link))</a>
-  <a class="login" href="register.html">Register</a>
+  <a class="title" href="./index.html">Main page(Link))</a>
+  <a class="login" href="../PHP/register.php">Register</a>
   <a class="login" href="login.html">Login</a>
 </div>
 <img src="../image/346725.jpg" style="height: 200px; width: 100%;" alt="uhhhidk" >
