Event Creation + Registration HTML

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,8 @@
   <a class="title" href="./index.html">Main page(Link)</a>
   <a class="login" href="../PHP/register.php">Register</a>
   <a class="login" href="../PHP/login.php">Login</a>
+  <a class="login" href="../PHP/event.php">Event Creation</a>
+  <a class="login" href="../PHP/eventRegister.php">Event Registration</a>
 </div>
 <img src="../image/346725.jpg" style="height: 200px; width: 100%;" alt="uhhhidk" >
 
