Created eventList and eventInfo pages

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
         <p>we can have like a list of 4-5 location with buttons to open the event here </p>
       </div>
       <div class ="smallsideboxes">        
-        <h2>List of events</h2>
+        <a href="../PHP/eventList.php">List of events</a>
         <p>a list of event that is also button that link to the event</p>
       </div>
       <div class ="smallsideboxes">
