--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,6 +14,7 @@
         <img alt="Home" src="./Cuttlefishy.png"
              width= "50"  height= "50" "./Cuttlefishy.png">
       </a>
+      <a class="title" href="../HTML/index.html">Cuttlefish Events</a>
       <a class="login" href="../PHP/register.php">Register</a>
       <a class="login" href="login.html">Login</a>
     </div>
