--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
       </a>
       <a class="title" href="../HTML/index.html">Cuttlefish Events</a>
       <a class="login" href="../PHP/register.php">Register</a>
-      <a class="login" href="login.html">Login</a>
+      <a class="login" href="../PHP/login.php">Login</a>
     </div>
   </div>
 </nav>
@@ -34,13 +34,12 @@
         <h1 style = "background-color: #5b2363"><center>Cuttlefish Events</center></h1>
       </div>
       <div class ="smallsideboxes">
-        <h2 style = "background-color: #5b2363"><center>Location</center></h2>
-        <ul class="list-group">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-          <li class="list-group-item">A fourth item</li>
-          <li class="list-group-item">And a fifth one</li>
+        <h2 style = "background-color: #5b2363"><center>Event Type</center></h2>
+        <ul class="list-group" >
+          <li class="list-group-item" style="color: black;">Wedding</li>
+          <li class="list-group-item" style="color: black;">Family reunion</li>
+          <li class="list-group-item" style="color: black;">Birthday</li>
+          <li class="list-group-item" style="color: black;">Other...</li>
         </ul>
       </div>
       <div class ="smallsideboxes">
